1.envoy_api_gateway/demo-deployment-ecoserver.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-server-echoserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-server-echoserver
  template:
    metadata:
      labels:
        app: web-server-echoserver
    spec:
      containers:
        - image: cilium/echoserver
          imagePullPolicy: IfNotPresent
          name: echoserver-web-server
          ports:
            - containerPort: 80
