1.envoy_api_gateway/demo-service-ecoserver-v2.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-server-echoserver-v2
spec:
  selector:
    app: web-server-echoserver-v2
  ports:
    - port: 80
      targetPort: 80
