1.envoy_api_gateway/demo-service-ecoserver.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-server-echoserver
spec:
  selector:
    app: web-server-echoserver
  ports:
    - port: 80
      targetPort: 80
